chore: change the project configuration

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "compile": "npx hardhat compile --force",
     "clean": "rm -rf dist",
     "deploy": "npx hardhat deploy",
-    "format": "prettier --write */**/*.*{js,sol,json,md,ts}",
+    "format": "prettier --check \"./**/*.{js,ts,tsx}\" README.md",
+    "format:fix": "prettier --write \"./**/*.{js,ts,tsx}\" README.md",
     "format:check": "prettier --check */**/*.*{js,sol,json,md,ts}",
-    "lint": "eslint --cache . && yarn lint:sol",
-    "lint:ts": "eslint -c .eslintrc.json --ext \"**/*.ts\" \"**/*.test.ts\"",
+    "lint": "eslint --max-warnings=0 --ext ts,tsx --report-unused-disable-directives web3-functions",
+    "lint:fix": "yarn lint --fix",
     "lint:sol": "solhint contracts/**/*.sol",
     "test": "npx hardhat test",
     "verify": "npx hardhat etherscan-verify",
@@ -35,13 +36,17 @@
     "@types/chai": "4.3.4",
     "@types/mocha": "10.0.1",
     "@types/node": "18.14.0",
-    "@typescript-eslint/eslint-plugin": "5.53.0",
-    "@typescript-eslint/parser": "5.53.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "chai": "4.3.7",
     "dotenv": "16.0.3",
-    "eslint": "8.34.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint": "^8.44.0",
+    "eslint-config-typestrict": "^1.0.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "ethereum-waffle": "4.0.10",
     "ethers": "5.7.2",
     "hardhat": "^2.13.0",
