--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,7 @@
 {
-  "overrides": [
-    {
-      "files": "*.sol",
-      "options": {
-        "compiler": "0.8.17"
-      }
-    }
-  ]
+  "trailingComma": "all",
+  "tabWidth": 4,
+  "useTabs": false,
+  "semi": false,
+  "singleQuote": true
 }
