--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,13 +5,19 @@ on:
     push:
         branches:
             - master
+env:
+  ALCHEMY_ID: ${{ secrets.ALCHEMY_ID }}
+  INFURA_ID: ${{ secrets.INFURA_ID }}
+  PROVIDER_URLS: ${{ vars.PROVIDER_URLS }}
 
 jobs:
   check:
     strategy:
       fail-fast: true
 
+    environment: CI
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
