feat: add multichain test setup and bootstrap governance executor

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lint": "eslint --max-warnings=0 --ext ts,tsx --report-unused-disable-directives web3-functions",
     "lint:fix": "yarn lint --fix",
     "lint:sol": "solhint contracts/**/*.sol",
-    "test": "npx hardhat test",
+    "test:mainnet": "export TEST_NETWORK=\"mainnet\" && npx hardhat test test/web3-functions/mainnet/*",
+    "test:gnosis": "export TEST_NETWORK=\"gnosis\" && npx hardhat test test/web3-functions/gnosis/*",
+    "test:utils": "export TEST_NETWORK=\"_\" && npx hardhat test test/utils/*",
+    "test": "yarn test:utils && yarn test:gnosis && yarn test:mainnet",
     "verify": "npx hardhat etherscan-verify",
     "create-task:adboard": "npx hardhat run ./scripts/create-task-adboard.ts",
     "create-task:oracle": "npx hardhat run ./scripts/create-task-oracle.ts",
