--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,11 @@ jobs:
       - name: Run linter
         run: yarn lint
 
-      - name: Run tests
-        run: yarn test
+      - name: Test utils
+        run: yarn test:utils
+
+      - name: Run gnosis tests
+        run: yarn test:gnosis
+
+      - name: Run mainnet tests
+        run: yarn test:mainnet
