chore: CI job rename

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run linter
         run: yarn lint
 
-      - name: Test utils
+      - name: Run utils tests
         run: yarn test:utils
 
       - name: Run gnosis tests
