--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@typescript-eslint/parser": "^5.61.0",
         "axios-mock-adapter": "^1.22.0",
         "chai": "4.3.7",
+        "chai-as-promised": "^7.1.2",
         "dotenv": "16.0.3",
         "eslint": "^8.44.0",
         "eslint-config-typestrict": "^1.0.5",
