--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "deploy": "npx hardhat deploy",
         "format": "prettier --check \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:fix": "prettier --write \"./**/*.{js,ts,tsx,json}\" README.md",
-        "format:check": "prettier --check */**/*.*{js,sol,json,md,ts}",
+        "format:check": "prettier --check */**/*.*{js,json,md,ts}",
         "lint": "eslint --max-warnings=0 --ext ts,tsx --report-unused-disable-directives web3-functions",
         "lint:fix": "yarn lint --fix",
         "lint:sol": "solhint contracts/**/*.sol",
