feat: add governance executor (#7)
* chore: change .env.example to .env

* chore: remove examples

* chore: change the project configuration

* feat: work on cap automator

* refactor: add a minor refactor

* test: improve execSupply tests

* test: add more tests

* test: add execBorrow tests

* chore: remove unused import

* refactor: use multicall

* refactor: use only one multicall

* refactor: simplify w3f

* chore: lint fix

* test: add exec tests

* test: add test for mixed case

* fix: remove .only

* refactor: refactor addresses

* refactor: add minor refactorings

* chore: add setup

* fix: fix tests

* feat: add gas check and tests

* fix: implement review comments

* test: add cap decrease tests

* chore: lint fix

* feat: add d3m ticker

* chore: move gasAboveAverage

* chore: add minor cap automator refactorings

* feat: add gas check

* test: polish d3m ticker tests

* fix: fix cap automator test

* chore: reorg test file structure

* chore: add gh action

* chore: change CI setup

* chore: lint fix

* chore: enhance CI setup

* test: enhance gasAboveAverage tests

* test: enhance tests

* feat: add kill switch oracle abi and address

* feat: add kill switch WIP

* feat: add oracle abi

* feat: add logic

* fix: linting

* docs: improve test description

* test: add more test boilerplating

* docs: add TODO comments

* fix: fix logic

* test: add positive case tests

* feat: WIP

* fix: apply minor fixes

* chore: remove redundant file

* chore: remove redundant tests

* chore: remove redundant test file

* chore: remove redundant files

* test: work on tests

* feat: change user args

* docs: update comments

* test: work on tests

* test: improve test setup

* test: improve test setup

* test: improve test setup

* test: add arbitrum tests

* fix: linting

* test: add arbitrum tests

* chore: update hardhat

* fix: fix hardh

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,14 @@ jobs:
       - name: Run linter
         run: yarn lint
 
-      - name: Run tests
-        run: yarn test
+      - name: Run formatter
+        run: yarn format:check
+
+      - name: Run utils tests
+        run: yarn test:utils
+
+      - name: Run gnosis tests
+        run: yarn test:gnosis
+
+      - name: Run mainnet tests
+        run: yarn test:mainnet
