--- a/package.json
+++ b/package.json
@@ -1,76 +1,80 @@
 {
-  "name": "gelato-web3-functions-hardhat-template",
-  "version": "1.0.0",
-  "description": "Gelato Web3 Functions Hardhat Template",
-  "repository": "https://github.com/gelatodigital/web3-functions-hardhat-template",
-  "private": false,
-  "scripts": {
-    "build": "yarn clean && yarn install && yarn compile && npx tsc",
-    "compile": "npx hardhat compile --force",
-    "clean": "rm -rf dist",
-    "deploy": "npx hardhat deploy",
-    "format": "prettier --check \"./**/*.{js,ts,tsx}\" README.md",
-    "format:fix": "prettier --write \"./**/*.{js,ts,tsx}\" README.md",
-    "format:check": "prettier --check */**/*.*{js,sol,json,md,ts}",
-    "lint": "eslint --max-warnings=0 --ext ts,tsx --report-unused-disable-directives web3-functions",
-    "lint:fix": "yarn lint --fix",
-    "lint:sol": "solhint contracts/**/*.sol",
-    "test": "npx hardhat test",
-    "verify": "npx hardhat etherscan-verify",
-    "create-task:adboard": "npx hardhat run ./scripts/create-task-adboard.ts",
-    "create-task:oracle": "npx hardhat run ./scripts/create-task-oracle.ts",
-    "w3f:test": "npx w3f test web3-functions/simple/index.ts --logs --chain-id=88153591557"
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "@matterlabs/hardhat-zksync-solc": "^0.3.17",
-    "@matterlabs/hardhat-zksync-verify": "^0.1.8",
-    "@nomicfoundation/hardhat-chai-matchers": "1.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "1.0.8",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@nomiclabs/hardhat-waffle": "^2.0.5",
-    "@openzeppelin/contracts": "4.8.1",
-    "@tsconfig/recommended": "1.0.2",
-    "@typechain/ethers-v5": "10.2.0",
-    "@typechain/hardhat": "6.1.5",
-    "@types/chai": "4.3.4",
-    "@types/mocha": "10.0.1",
-    "@types/node": "18.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "axios-mock-adapter": "^1.22.0",
-    "chai": "4.3.7",
-    "dotenv": "16.0.3",
-    "eslint": "^8.44.0",
-    "eslint-config-typestrict": "^1.0.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-sonarjs": "^0.19.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "ethereum-waffle": "4.0.10",
-    "ethers": "5.7.2",
-    "hardhat": "^2.13.0",
-    "hardhat-deploy": "^0.11.31",
-    "lint-staged": "13.1.2",
-    "prettier": "2.8.4",
-    "prettier-plugin-solidity": "1.1.2",
-    "solhint": "3.4.0",
-    "solhint-plugin-prettier": "0.0.5",
-    "ts-generator": "0.1.1",
-    "ts-node": "10.9.1",
-    "typechain": "8.1.1",
-    "typescript": "4.9.5"
-  },
-  "lint-staged": {
-    "*.*{js,sol,json,md,ts,yml,yaml}": "prettier --write",
-    "*.*{ts,js}": "eslint -c .eslintrc.json"
-  },
-  "dependencies": {
-    "@gelatonetwork/automate-sdk": "^3.0.2",
-    "@gelatonetwork/web3-functions-sdk": "^2.3.0",
-    "axios": "^1.6.8",
-    "ky": "^0.33.2"
-  }
+    "name": "gelato-web3-functions-hardhat-template",
+    "version": "1.0.0",
+    "description": "Gelato Web3 Functions Hardhat Template",
+    "repository": "https://github.com/gelatodigital/web3-functions-hardhat-template",
+    "private": false,
+    "scripts": {
+        "build": "yarn clean && yarn install && yarn compile && npx tsc",
+        "compile": "export TEST_NETWORK=\"_\" && npx hardhat compile --force",
+        "clean": "rm -rf dist",
+        "deploy": "npx hardhat deploy",
+        "format": "prettier --check \"./**/*.{js,ts,tsx,json}\" README.md",
+        "format:fix": "prettier --write \"./**/*.{js,ts,tsx,json}\" README.md",
+        "format:check": "prettier --check */**/*.*{js,json,md,ts}",
+        "lint": "eslint --max-warnings=0 --ext ts,tsx --report-unused-disable-directives web3-functions",
+        "lint:fix": "yarn lint --fix",
+        "lint:sol": "solhint contracts/**/*.sol",
+        "test:mainnet": "export TEST_NETWORK=\"mainnet\" && npx hardhat test test/web3-functions/mainnet/*",
+        "test:gnosis": "export TEST_NETWORK=\"gnosis\" && npx hardhat test test/web3-functions/gnosis/*",
+        "test:utils": "export TEST_NETWORK=\"_\" && npx hardhat test test/utils/*",
+        "test": "yarn test:utils && yarn test:gnosis && yarn test:mainnet",
+        "verify": "npx hardhat etherscan-verify",
+        "create-task:adboard": "npx hardhat run ./scripts/create-task-adboard.ts",
+        "create-task:oracle": "npx hardhat run ./scripts/create-task-oracle.ts",
+        "w3f:test": "npx w3f test web3-functions/simple/index.ts --logs --chain-id=88153591557"
+    },
+    "license": "ISC",
+    "devDependencies": {
+        "@matterlabs/hardhat-zksync-solc": "^0.3.17",
+        "@matterlabs/hardhat-zksync-verify": "^0.1.8",
+        "@nomicfoundation/hardhat-chai-matchers": "1.0.6",
+        "@nomicfoundation/hardhat-network-helpers": "1.0.8",
+        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+        "@nomiclabs/hardhat-etherscan": "^3.1.7",
+        "@nomiclabs/hardhat-waffle": "^2.0.5",
+        "@openzeppelin/contracts": "4.8.1",
+        "@tsconfig/recommended": "1.0.2",
+        "@typechain/ethers-v5": "10.2.0",
+        "@typechain/hardhat": "6.1.5",
+        "@types/chai": "4.3.4",
+        "@types/mocha": "10.0.1",
+        "@types/node": "18.14.0",
+        "@typescript-eslint/eslint-plugin": "^5.61.0",
+        "@typescript-eslint/parser": "^5.61.0",
+        "axios-mock-adapter": "^1.22.0",
+        "chai": "4.3.7",
+        "chai-as-promised": "^7.1.2",
+        "dotenv": "16.0.3",
+        "eslint": "^8.44.0",
+        "eslint-config-typestrict": "^1.0.5",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-no-only-tests": "^3.1.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "eslint-plugin-sonarjs": "^0.19.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "ethereum-waffle": "4.0.10",
+        "ethers": "5.7.2",
+        "hardhat": "^2.13.0",
+        "hardhat-deploy": "^0.11.31",
+        "lint-staged": "13.1.2",
+        "prettier": "2.8.4",
+        "prettier-plugin-solidity": "1.1.2",
+        "solhint": "3.4.0",
+        "solhint-plugin-prettier": "0.0.5",
+        "ts-generator": "0.1.1",
+        "ts-node": "10.9.1",
+        "typechain": "8.1.1",
+        "typescript": "4.9.5"
+    },
+    "lint-staged": {
+        "*.*{js,sol,json,md,ts,yml,yaml}": "prettier --write",
+        "*.*{ts,js}": "eslint -c .eslintrc.json"
+    },
+    "dependencies": {
+        "@gelatonetwork/automate-sdk": "^3.0.2",
+        "@gelatonetwork/web3-functions-sdk": "^2.3.0",
+        "axios": "^1.6.8",
+        "ky": "^0.33.2"
+    }
 }
