feat: deploy gnosis governance executor

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "yarn clean && yarn install && yarn compile && npx tsc",
         "compile": "export TEST_NETWORK=\"_\" && npx hardhat compile --force",
         "clean": "rm -rf dist",
-        "deploy": "npx hardhat deploy",
+        "deploy": "export TEST_NETWORK=\"_\" && npx hardhat deploy",
+        "deploy:w3f": "export TEST_NETWORK=\"_\" && npx hardhat w3f-deploy",
         "format": "prettier --check \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:fix": "prettier --write \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:check": "prettier --check */**/*.*{js,json,md,ts}",
@@ -19,9 +20,7 @@
         "test:gnosis": "export TEST_NETWORK=\"gnosis\" && npx hardhat test test/web3-functions/gnosis/*",
         "test:utils": "export TEST_NETWORK=\"_\" && npx hardhat test test/utils/*",
         "test": "yarn test:utils && yarn test:gnosis && yarn test:mainnet",
-        "verify": "npx hardhat etherscan-verify",
-        "create-task:adboard": "npx hardhat run ./scripts/create-task-adboard.ts",
-        "create-task:oracle": "npx hardhat run ./scripts/create-task-oracle.ts",
+        "verify": "export TEST_NETWORK=\"_\" && npx hardhat etherscan-verify",
         "w3f:test": "npx w3f test web3-functions/simple/index.ts --logs --chain-id=88153591557"
     },
     "license": "ISC",
