--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "private": false,
     "scripts": {
         "build": "yarn clean && yarn install && yarn compile && npx tsc",
-        "compile": "export TEST_NETWORK=\"_\" && npx hardhat compile --force",
+        "compile": "npx hardhat compile --force",
         "clean": "rm -rf dist",
-        "deploy": "export TEST_NETWORK=\"_\" && npx hardhat deploy",
-        "deploy:w3f": "export TEST_NETWORK=\"_\" && npx hardhat w3f-deploy",
+        "deploy": "npx hardhat deploy",
+        "deploy:w3f": "npx hardhat w3f-deploy",
         "format": "prettier --check \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:fix": "prettier --write \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:check": "prettier --check */**/*.*{js,json,md,ts}",
@@ -18,9 +18,9 @@
         "lint:sol": "solhint contracts/**/*.sol",
         "test:mainnet": "export TEST_NETWORK=\"mainnet\" && npx hardhat test test/web3-functions/mainnet/*",
         "test:gnosis": "export TEST_NETWORK=\"gnosis\" && npx hardhat test test/web3-functions/gnosis/*",
-        "test:utils": "export TEST_NETWORK=\"_\" && npx hardhat test test/utils/*",
+        "test:utils": "npx hardhat test test/utils/*",
         "test": "yarn test:utils && yarn test:gnosis && yarn test:mainnet",
-        "verify": "export TEST_NETWORK=\"_\" && npx hardhat etherscan-verify",
+        "verify": "npx hardhat etherscan-verify",
         "w3f:test": "npx w3f test web3-functions/simple/index.ts --logs --chain-id=88153591557"
     },
     "license": "ISC",
