feat: add deploy command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "yarn clean && yarn install && yarn compile && npx tsc",
         "compile": "npx hardhat compile --force",
         "clean": "rm -rf dist",
-        "deploy": "npx hardhat deploy",
+        "deploy:all": "npx ts-node scripts/deployAll.ts",
+        "deploy:contracts": "npx hardhat deploy",
         "deploy:w3f": "npx hardhat w3f-deploy",
         "format": "prettier --check \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:fix": "prettier --write \"./**/*.{js,ts,tsx,json}\" README.md",
