refactor: rename scripts

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
         "build": "yarn clean && yarn install && yarn compile && npx tsc",
         "compile": "npx hardhat compile --force",
         "clean": "rm -rf dist",
-        "deploy:all": "npx ts-node scripts/deployAll.ts",
         "deploy:contracts": "npx hardhat deploy",
         "deploy:w3f": "npx hardhat w3f-deploy",
         "format": "prettier --check \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:fix": "prettier --write \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:check": "prettier --check */**/*.*{js,json,md,ts}",
-        "ipfs": "npx ts-node scripts/uploadToIpfs.ts",
-        "checkKey": "npx ts-node scripts/checkDeployerKey.ts",
+        "gelato:checkKey": "npx ts-node scripts/checkDeployerKey.ts",
+        "gelato:deploy": "npx ts-node scripts/deployAll.ts",
+        "gelato:ipfs": "npx ts-node scripts/uploadToIpfs.ts",
         "lint": "eslint --max-warnings=0 --ext ts,tsx --report-unused-disable-directives web3-functions",
         "lint:fix": "yarn lint --fix",
         "lint:sol": "solhint contracts/**/*.sol",
