--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "gelato:checkKey": "npx ts-node scripts/checkDeployerKey.ts",
         "gelato:deploy": "npx ts-node scripts/deployAll.ts",
         "gelato:ipfs": "npx ts-node scripts/uploadToIpfs.ts",
+        "gelato:list": "npx ts-node scripts/listActiveTasks.ts",
         "lint": "eslint --max-warnings=0 --ext ts,tsx --report-unused-disable-directives web3-functions",
         "lint:fix": "yarn lint --fix",
         "lint:sol": "solhint contracts/**/*.sol",
