--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@types/chai": "4.3.4",
         "@types/mocha": "10.0.1",
         "@types/node": "18.14.0",
+        "@types/yargs": "^17.0.32",
         "@typescript-eslint/eslint-plugin": "^5.61.0",
         "@typescript-eslint/parser": "^5.61.0",
         "axios-mock-adapter": "^1.22.0",
@@ -78,6 +79,7 @@
         "@gelatonetwork/automate-sdk": "^3.0.2",
         "@gelatonetwork/web3-functions-sdk": "^2.3.0",
         "axios": "^1.6.8",
-        "ky": "^0.33.2"
+        "ky": "^0.33.2",
+        "yargs": "^17.7.2"
     }
 }
