docs: add comment with the correct PK

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ env:
   INFURA_ID: ${{ secrets.INFURA_ID }}
   PROVIDER_URLS: ${{ vars.PROVIDER_URLS }}
   GELATO_PRIVATE_KEY: ${{ secrets.DUMMY_PRIVATE_KEY }}
+  # GELOTO_PRIVATE_KEY: ${{ secrets.DEPLOYER_PRIVATE_KEY }}
   MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
   GNOSIS_CHAIN_RPC_URL: ${{ secrets.GNOSIS_CHAIN_RPC_URL }}
   SPARK_INFO_SLACK_WEBHOOK_URL: ${{ secrets.SPARK_INFO_SLACK_WEBHOOK_URL }}
