--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,13 @@ name: CD
 on:
     push:
         branches:
-            - sc-505-refactor-deployment-scripts
+            - master
 env:
   ALCHEMY_ID: ${{ secrets.ALCHEMY_ID }}
   INFURA_ID: ${{ secrets.INFURA_ID }}
   PROVIDER_URLS: ${{ vars.PROVIDER_URLS }}
-  GELOTO_PRIVATE_KEY: ${{ secrets.DUMMY_PRIVATE_KEY }}
-  # GELOTO_PRIVATE_KEY: ${{ secrets.DEPLOYER_PRIVATE_KEY }}
+  GELATO_PRIVATE_KEY: ${{ secrets.DUMMY_PRIVATE_KEY }}
+  # GELATO_PRIVATE_KEY: ${{ secrets.DEPLOYER_PRIVATE_KEY }}
   MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
   GNOSIS_CHAIN_RPC_URL: ${{ secrets.GNOSIS_CHAIN_RPC_URL }}
   SPARK_INFO_SLACK_WEBHOOK_URL: ${{ secrets.SPARK_INFO_SLACK_WEBHOOK_URL }}
