--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,4 @@ jobs:
         run: yarn gelato:ipfs
 
       - name: Deploy keepers
-        run: yarn gelato:deploy -d -n
+        run: yarn gelato:deploy -n
