test: dry run the deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CD
 on:
     push:
         branches:
-            - master
+            - sc-505-refactor-deployment-scripts
 env:
   ALCHEMY_ID: ${{ secrets.ALCHEMY_ID }}
   INFURA_ID: ${{ secrets.INFURA_ID }}
@@ -32,4 +32,4 @@ jobs:
         run: yarn install
 
       - name: Deploy keepers
-        run: yarn gelato:deploy -n
+        run: yarn gelato:deploy -n -d
