feat: create a new deployment script (#21)
* refactor: move listDirectories to utils

* feat: add listJsonFiles helper

* feat: finish deployment script

* refactor: rename testKeystoreAccess

* feat: add extra casting

* feat: add proper keeper configuration

* fix: add missing type

* chore: remove old script

* feat: add dryRun and forceRedeploy modes

* fix: implement review suggestions

* fix: formatting

* feat: create pre-deployments.json if it does not exist

* docs: add extra console.log

* fix: formatting

* chore: delete pre-deployments

* test: add CD deployment config (#22)

* test: add dummy config

* fix: fix

* test: test

* feat: add noConfirm flag

* feat: add secrets

* docs: add comment with the correct PK

* feat: add improvements

* feat: change automatic deployment to only run on master branch

* test: use dummy private key

* fix: typo

* test: test on branch

* feat: use a correct key

* feat: only deploy on master

* feat: turn off dryrun mode for the CD deployment

* docs: README summary of automations (SC-516) (#23)

* feat: add table with summary, general cleanup

* docs: improve readme (#24)

* docs: improve readme

* fix: add review fixes

* fix: add more fixes

---------

Co-authored-by: Bartek Rutkowski <barrutko.eth@gmail.com>

* fix: implement review changes

* test: dry run the deployment

* test: use dummy private key

* feat: make the CD pipeline ready to deploy

---------

Co-authored-by: Lucas Manuel <lucasmanuel.tech@gmail.com>

--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
         "format": "prettier --check \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:fix": "prettier --write \"./**/*.{js,ts,tsx,json}\" README.md",
         "format:check": "prettier --check */**/*.*{js,json,md,ts}",
-        "gelato:checkKey": "npx ts-node scripts/checkDeployerKey.ts",
-        "gelato:deploy": "npx ts-node scripts/deployAll.ts",
-        "gelato:ipfs": "npx ts-node scripts/uploadToIpfs.ts",
+        "gelato:checkKey": "npx ts-node scripts/testKeystoreAccess.ts",
+        "gelato:deploy": "npx ts-node scripts/deploy.ts",
         "gelato:list": "npx ts-node scripts/listActiveTasks.ts",
         "lint": "eslint --max-warnings=0 --ext ts,tsx --report-unused-disable-directives web3-functions",
         "lint:fix": "yarn lint --fix",
@@ -43,6 +42,7 @@
         "@types/chai": "4.3.4",
         "@types/mocha": "10.0.1",
         "@types/node": "18.14.0",
+        "@types/yargs": "^17.0.32",
         "@typescript-eslint/eslint-plugin": "^5.61.0",
         "@typescript-eslint/parser": "^5.61.0",
         "axios-mock-adapter": "^1.22.0",
@@ -78,6 +78,7 @@
         "@gelatonetwork/automate-sdk": "^3.0.2",
         "@gelatonetwork/web3-functions-sdk": "^2.3.0",
         "axios": "^1.6.8",
-        "ky": "^0.33.2"
+        "ky": "^0.33.2",
+        "yargs": "^17.7.2"
     }
 }
