feat: redirect notifications to a different channel

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ env:
   MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
   GNOSIS_CHAIN_RPC_URL: ${{ secrets.GNOSIS_CHAIN_RPC_URL }}
   SPARK_INFO_SLACK_WEBHOOK_URL: ${{ secrets.SPARK_INFO_SLACK_WEBHOOK_URL }}
+  SSR_ORACLES_ALERTS_SLACK_WEBHOOK_URL: ${{ secrets.SSR_ORACLES_ALERTS_SLACK_WEBHOOK_URL }}
   GELATO_KEEPERS_ETHERSCAN_API_KEY: ${{ secrets.GELATO_KEEPERS_ETHERSCAN_API_KEY }}
 
 jobs:
