--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ env:
   PROVIDER_URLS: ${{ vars.PROVIDER_URLS }}
   GELATO_PRIVATE_KEY: ${{ secrets.DEPLOYER_PRIVATE_KEY }}
   MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
+  BASE_RPC_URL: ${{ secrets.BASE_RPC_URL }}
   GNOSIS_CHAIN_RPC_URL: ${{ secrets.GNOSIS_CHAIN_RPC_URL }}
   SPARK_INFO_SLACK_WEBHOOK_URL: ${{ secrets.SPARK_INFO_SLACK_WEBHOOK_URL }}
   SSR_ORACLES_ALERTS_SLACK_WEBHOOK_URL: ${{ secrets.SSR_ORACLES_ALERTS_SLACK_WEBHOOK_URL }}
