--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ env:
   BASE_RPC_URL: ${{ secrets.BASE_RPC_URL }}
   GNOSIS_CHAIN_RPC_URL: ${{ secrets.GNOSIS_CHAIN_RPC_URL }}
   SPARK_INFO_SLACK_WEBHOOK_URL: ${{ secrets.SPARK_INFO_SLACK_WEBHOOK_URL }}
+  SPARK_ALERTS_SLACK_WEBHOOK_URL: ${{ secrets.SPARK_ALERTS_SLACK_WEBHOOK_URL }}
   SSR_ORACLES_ALERTS_SLACK_WEBHOOK_URL: ${{ secrets.SSR_ORACLES_ALERTS_SLACK_WEBHOOK_URL }}
   GELATO_KEEPERS_ETHERSCAN_API_KEY: ${{ secrets.GELATO_KEEPERS_ETHERSCAN_API_KEY }}
 
